# abc_test

./: .clang-format  .clang-tidy  .gitignore  .pre-comit-config.yaml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  IDEAS.md  LICENSE  README.md  TODO.md
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
examples/data/: examples_config
examples/data/test_data/File data generator examples/: integer_file.gd
examples/data/test_data/File_data_generator_examples/: integer_file.gd
examples/data/test_data/Random data generator examples/: gdf_1.gd  integer_file.td  integer_file2.td  integer_file3.td
examples/data/test_data/Random_data_generator_examples/: gdf_1.gd  integer_file.td  integer_file2.td  integer_file3.td
examples/data/test_data/readme/fib/Testing_Fibonacci_function_using_data_from_a_file/: unit_tests.gd
examples/data/test_data/special_folder/: gdf_2.gd  integer_file.gd
examples/data/test_data/unique/path/: integer_file.gd
examples/include/abc_test_examples/: basic_examples.h  basic_examples.hpp  basic_tests.h  data_generator_examples.h  data_generator_examples.hpp  documentation.hpp  enumeration.hpp  gen_data_examples.h  readme.hpp
examples/include/abc_test_examples/basic_examples/: 01_assertions.h  01_assertions.hpp  02_basic_matchers.h  02_basic_matchers.hpp  03_matchers_and_logical_operators.h  03_matchers_and_logical_operators.hpp  04_matchers_and_comparison_operators.h  04_matchers_and_comparison_operators.hpp  05_user_defined_matcher.h  05_user_defined_matcher.hpp  06_block_assertions_and_exception_handling.h  06_block_assertions_and_exception_handling.hpp  06_manual_block_assertions.h  comparison_operators.h  exceptions.h  exceptions.hpp  logical_operators.h
examples/include/abc_test_examples/basic_tests/: assertions.h  comparison_operators.h  exceptions.h  logical_operators.h
examples/include/abc_test_examples/data_generator_examples/: 01_static_gen_data_examples.h  01_static_gen_data_examples.hpp  02_generate_data_from_file_examples.h  02_generate_data_from_file_examples.hpp  03_generate_data_randomly.h  03_generate_data_randomly.hpp  04_enumerating_data_examples.h  04_enumerating_data_examples.hpp  05_manual_data_generator_examples.h  05_manual_data_generator_examples.hpp  06_combinatorics_data_generator_examples.h  06_combinatorics_data_generator_examples.hpp
examples/include/abc_test_examples/documentation/: data_generators.hpp  declaring_tests.hpp  matchers.hpp  readme_1.hpp  readme_2.hpp  test_assertions.hpp
examples/include/abc_test_examples/enumeration/: enum_enumeration_examples.h  enum_enumeration_examples.hpp
examples/include/abc_test_examples/gen_data_examples/: 01_static_gen_data_examples.h  02_generate_data_from_file_examples.h  03_generate_data_randomly.h
examples/readme/fib/Testing_Fibonacci_function_using_data_from_a_file/: unit_tests.gd
examples/src/: main.cpp
tests/: CMakeLists.txt
tests/data/: abc_test_test_config  testlib_config
tests/data/repetition_data_file/: autofile_1_1000.txt
tests/data/repetition_data_files/: autofile_1_1000  autofile_1_1000.txt
tests/data/test_data/abc_test_test/utility/Tests_enumerate_enum_helper_t__less_than__equal_and_difference2/: error_tests_equal_enum__anonymous_namespace___enum_with_enum_list_1.gd  error_tests_equal_enum__anonymous_namespace___enum_with_enum_list_3.gd  error_tests_equal_enum__anonymous_namespace___enum_with_enum_list_4.gd  error_tests_less_than_enum__anonymous_namespace___enum_with_enum_list_1.gd  error_tests_less_than_enum__anonymous_namespace___enum_with_enum_list_2.gd  unit_tests_difference_enum__anonymous_namespace___enum_with_enum_list_1.gd  unit_tests_difference_enum__anonymous_namespace___enum_with_enum_list_2.gd  unit_tests_difference_enum__anonymous_namespace___enum_with_enum_list_3.gd  unit_tests_difference_enum__anonymous_namespace___enum_with_enum_list_4.gd  unit_tests_equal_enum__anonymous_namespace___enum_with_enum_list_3.gd  unit_tests_equal_enum__anonymous_namespace___enum_with_enum_list_4.gd  unit_tests_less_than_enum__anonymous_namespace___enum_with_enum_list_2.gd  (+1 more)
tests/include/: main.h
tests/include/abc_test_test/: component_tests.hpp  core.hpp  included_instances.hpp  std_specializations.hpp  utility.hpp
tests/include/abc_test_test/component_tests/: data_generators.hpp  macros.hpp  repetition_config.hpp
tests/include/abc_test_test/component_tests/data_generators/: data_generator_with_file_support.hpp  enumeration_data_generator.hpp  file_data_generator.hpp  random_data_generator.hpp  static_data_generator.hpp
tests/include/abc_test_test/component_tests/macros/: assertions.hpp
tests/include/abc_test_test/core/: test_assertions.h  test_main.h
tests/include/abc_test_test/core/errors/: abc_test_exception.hpp  test_assertion_exception.h  test_library_exception.hpp
tests/include/abc_test_test/gen_data/random/: using_functions.h
tests/include/abc_test_test/internal/utility/: cli.hpp
tests/include/abc_test_test/matchers/: comparison.h  generic_matcher.h  matcher.h
tests/include/abc_test_test/matchers/comparison/: comparison_enum.h  comparison_matcher.h  constructors.h  operators.h  placeholder.h  wrapper.h
tests/include/abc_test_test/std_specializations/: default_random_generator.hpp
tests/include/abc_test_test/std_specializations/default_random_generator/: fundamental_types.hpp
tests/include/abc_test_test/test_utilities/: basic_example_test_script.h  example_matcher.h  general_includes.h  pc_setup_tests_reporter.h  pc_test_reporter.h  register_test.h
tests/include/abc_test_test/testing_utilities/: bootstrapped_testing_utilities.hpp  functions.hpp  simple_random_generator.hpp
tests/include/abc_test_test/utility/: bounds.hpp  cli.hpp  combinatorics.h  concepts.hpp  enum.hpp  ranges.hpp  rng.hpp  str.hpp
tests/include/abc_test_test/utility/combinatorics/: combinations.h
tests/include/abc_test_test/utility/rng/: inner_rng_mt19937_64.hpp  rng_utilities.hpp
tests/include/abc_test_test/utility/str/: concepts.hpp  print_utils.hpp  string_cast.hpp  unicode.hpp
tests/src/: main.cpp
(+313 files in other folders)
